--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title></title>
-
+    <title>Nabil Frontend</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <img
+      src="https://appproject.dhiwise.com/dhiwise-logo.png?c=27r-f22728-DD6&v=1.0.8"
+      style="width: 0px; height: 0px"
+    />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
